<resources>
    <string name="app_name">OnMarcy</string>

    <string-array name="types">
        <item>Brand</item>
        <item>Marketer</item>
    </string-array>

    <string name="url">https://api-onmarcy.genoratory.com/</string>
    <string name="url_host">checkout.xendit.co</string>

    <!--    Register-->
    <string name="email_format_is_not_valid">Email format is not valid</string>
    <string name="please_fill_out_this_field">Please fill out this field</string>
    <string name="register_an_account">REGISTER AN ACCOUNT</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password_doesnt_match">Password doesn`t match</string>
    <string name="referral_code_optional">Referral Code (optional)</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="account_type">Account Type</string>
    <string name="i_have_read_and_agree_to_the">I have read and agree to the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="popup_agreement">Please agree with our terms</string>
    <string name="register">register</string>
    <string name="successfully_sent">Successfully sent</string>
    <string name="please_check_your_email">Please check your email</string>

    <!--    Login-->
    <string name="login_to_your_account">LOGIN TO YOUR ACCOUNT</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="join_us">Join us!</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot password</string>

    <!--    Profile-->
    <string name="profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="new_password">New Password</string>
    <string name="select_city">Select City</string>
    <string name="please_choose_city">Please choose city</string>
    <string name="type_your_instagram">Type your Instagram</string>
    <string name="send">Send</string>
    <string name="submit">submit</string>
    <string name="verified">Verified</string>
    <string name="pending">Pending</string>
    <string name="total_post">Total post</string>
    <string name="total_comment">Total comment</string>
    <string name="total_like">Total like</string>
    <string name="minimum_age">Minimum age</string>
    <string name="maximum_age">Maximum age</string>
    <string name="time_posting">Time posting</string>
    <string name="service_type">Service type</string>
    <string name="female">Female</string>
    <string name="verification_code">Verification code</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="category">Category</string>
    <string name="verify">Verify</string>
    <string name="bio">Bio</string>
    <string name="post">Post</string>
    <string name="story">Story</string>
    <string name="edit">Edit</string>
    <string name="update_instagram">Update Instagram</string>
    <string name="pending_campaign">Pending Campaign</string>
    <string name="please_choose_category">Please choose category</string>
    <string name="msg_choose_service">Please choose at least 1 service type</string>
    <string name="logout">Logout</string>

    <!--    Create Campaign-->
    <string name="create_campaign">Create Campaign</string>
    <string name="title">Title</string>
    <string name="male">Male</string>
    <string name="all">All</string>
    <string name="notes">Notes</string>
    <string name="select_time">Select Time</string>
    <string name="duration">Duration</string>
    <string name="price">Price</string>
    <string name="create">Create</string>
    <string name="choose_category">Choose Category</string>
    <string name="campaign_description">CAMPAIGN DESCRIPTION</string>
    <string name="msg_age">Maximum age must be higher</string>

    <!--    List Campaign-->
    <string name="campaigns">Campaigns</string>
    <string name="active">Active</string>
    <string name="on_progress">On Progress</string>
    <string name="completed">Completed</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="inactive">Inactive</string>
    <string name="price_format">Rp. %1$s,00</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="content">Content</string>
    <string name="view_result">View Result</string>
    <string name="no_result_found">No Result Found</string>
    <string name="date">%1$s-%2$s-%3$s</string>
    <string name="datetime">%1$s-%2$s-%3$s %4$s:%5$s</string>

    <!--    Menu Item-->
    <string name="home">Home</string>
    <string name="lists">Lists</string>
    <string name="chat">Chat</string>
    <string name="history">History</string>

    <!--    Filter-->
    <string name="lowest_price">Lowest Price</string>
    <string name="highest_price">Highest Price</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="search_campaign">Search Campaign</string>

    <!--    Confirmation Dialog-->
    <string name="msg_back">Are you sure to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="msg_verification">Please wait for at least 24 hour for your verification code in your Instagram</string>
    <string name="info">INFO</string>
    <string name="ok">OK</string>
    <string name="msg_logout">Are you sure to logout?</string>
    <string name="confirmation">Confirmation</string>
    <string name="msg_delete_campaign">Are you sure to delete this campaign?</string>
    <string name="msg_verification_ig">Are you sure %1$s is your Instagram account?</string>

    <!--    Toast-->
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_unsuccessful">Login unsuccessful!</string>
    <string name="error">error</string>
    <string name="verification_success">Verification success</string>
    <string name="verification_fail">Verification fail</string>
    <string name="update_unsuccessful">Update unsuccessful</string>
    <string name="update_successful">Update successful</string>

    <!--    Category Item-->
    <string name="category1"><![CDATA[Business & Industry]]></string>
    <string name="category2">Entertainment</string>
    <string name="category3"><![CDATA[Family & Relationships]]></string>
    <string name="category4"><![CDATA[Fitness & Wellness]]></string>
    <string name="category5"><![CDATA[Food & Beverages]]></string>
    <string name="category6"><![CDATA[Hobbies & Activities]]></string>
    <string name="category7"><![CDATA[Shopping & Fashion]]></string>
    <string name="category8"><![CDATA[Sports & Outdoors]]></string>
    <string name="category9">Technology</string>

    <!--    Content-->
    <string name="description">Description</string>
    <string name="brand">Brand</string>
    <string name="instagram_username">Instagram Username</string>
    <string name="date_posting">Date Posting</string>
    <string name="upload_time">Upload Time</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="details">Details</string>
    <string name="target_market">Target Market</string>
    <string name="update_campaign">Update Campaign</string>
    <string name="TARGET_MARKET">TARGET MARKET</string>
    <string name="Upload_Content">Upload Content</string>
    <string name="Detail_Campaign">Detail Campaign</string>

    <string name="payment">Payment</string>

    <!--    Photo-->
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="remove_photo">Remove photo</string>
    <string name="cancel">Cancel</string>
    <string name="insert_picture">Insert Picture</string>
    <string name="msg_save_changes">Save changes?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="upload_content">UPLOAD CONTENT</string>
    <string name="caption">Caption</string>
    <string name="link_in_bio">Link In Bio</string>
    <string name="preview">Preview</string>
    <string name="msg_limit">The limit is %1$d photos</string>

    <string name="your_task">Your Task</string>

    <!--    Proof-->
    <string name="upload_screenshot">Upload Screenshot</string>
    <string name="result">Result</string>
    <string name="total_save">Total save</string>
    <string name="total_reach">Total reach</string>
    <string name="total_engagement">Total engagement</string>
    <string name="total_impression">Total impression</string>
    <string name="accept">Accept</string>
    <string name="list_marketer">List Marketer</string>
    <string name="detail_result">Detail Result</string>
    <string name="view_details">View Details</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="comment">Comment</string>
    <string name="approach">Approach</string>
    <string name="view_comments">View comments</string>
    <string name="comments">Comments</string>
    <string name="submission">Submission</string>
    <string name="portfolio">Portfolio</string>
    <string name="no_image_found">No Image Found</string>
    <string name="msg_add_portfolio">Portfolio successfully added</string>
    <string name="msg_delete_portfolio">Are you sure to delete this portfolio</string>

</resources>