<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/category_1"
        android:title="@string/category1" />
    <item
        android:id="@+id/category_2"
        android:title="@string/category2" />
    <item
        android:id="@+id/category_3"
        android:title="@string/category3" />
    <item
        android:id="@+id/category_4"
        android:title="@string/category4" />
    <item
        android:id="@+id/category_5"
        android:title="@string/category5" />
    <item
        android:id="@+id/category_6"
        android:title="@string/category6" />
    <item
        android:id="@+id/category_7"
        android:title="@string/category7" />
    <item
        android:id="@+id/category_8"
        android:title="@string/category8" />
    <item
        android:id="@+id/category_9"
        android:title="@string/category9" />
</menu>