<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".campaign.ContentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Title"
            android:textColor="@color/red1"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/textview1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/textview1" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/base_cardview"
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintVertical_bias="0.021"
            app:strokeColor="@drawable/stroke_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <TextView
                    style="@style/subtitle"
                    android:text="@string/details"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="10dp"
                    android:background="@color/gray2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand" />

                <TextView
                    android:id="@+id/tv_brand"
                    style="@style/textview1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instagram_username" />

                <TextView
                    android:id="@+id/tv_instagram"
                    style="@style/textview1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_posting" />

                <TextView
                    android:id="@+id/tv_date"
                    style="@style/textview1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_time" />

                <TextView
                    android:id="@+id/tv_time"
                    style="@style/textview1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration" />

                <TextView
                    android:id="@+id/tv_duration"
                    style="@style/textview1" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/base_cardview2"
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintVertical_bias="0.021"
            app:strokeColor="@drawable/stroke_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <TextView
                    style="@style/subtitle"
                    android:text="@string/target_market"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="10dp"
                    android:background="@color/gray2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category" />

                <TextView
                    android:id="@+id/tv_category"
                    style="@style/textview1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age" />

                <TextView
                    android:id="@+id/tv_age"
                    style="@style/textview1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/tv_gender"
                    style="@style/textview1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/textview1" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_approach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/approach"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_cancelApproach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false" />

        </LinearLayout>

        <TextView
            style="@style/subtitle"
            android:text="@string/comment"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/edt_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/btn_send"
                android:background="@drawable/custom_edittext_chat"
                android:hint="@string/add_a_comment"
                android:textSize="15sp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="7dp" />

            <ImageView
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/edt_msg"
                android:layout_alignBottom="@+id/edt_msg"
                android:layout_alignParentRight="true"
                android:paddingHorizontal="10dp"
                android:src="@drawable/ic_baseline_send_24" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_view_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_comments"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

</ScrollView>